--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automotivo</title>
-    <link rel="stylesheet" href="/automotivo/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
@@ -19,6 +19,15 @@
         </nav>
     </header>
     <main class="hero"></main>
+    <section class="imagem" id="img">
+
+        <h1>Testes</h1>
+    </section>
+
+    <div>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus doloremque est, minus placeat dignissimos minima iure quam cum corporis ipsum amet praesentium nihil magnam asperiores voluptas voluptatum molestiae id debitis!</p>
+    </div>
 
 <script src="./js/app.js"></script>
 </body>
