--- a/index.html
+++ b/index.html
@@ -51,5 +51,10 @@
    
 
 <script src="./js/app.js"></script>
+<footer>
+    <p>
+        Site Criado para projeto Eduacacional 
+    </p>
+</footer>
 </body>
 </html>
