Atualizando o css do projeto

--- a/index.html
+++ b/index.html
@@ -48,8 +48,30 @@
             </p>
         </div>
     </section>
-   
 
 <script src="./js/app.js"></script>
+
+<footer>
+
+    <h2>Entre em contato</h2>
+    <p>Caso deseje realizar seu projeto ou fazer um orçamento, nos envie uma mensagem.</p>
+    
+
+    <form>
+        <input type="text" name="nome" placeholder="Informe seu nome">
+
+        <input type="email" name="email" placeholder="Informe seu e-mail">
+
+        <textarea name="mensagem" cols="30" rows="10" placeholder="Escreva sua mensagem"></textarea>
+
+        <input type="submit" value="Enviar" class="btn">
+
+    </form>
+
+    <p>
+        Site Criado para <span class="desenvolvido">Projeto Eduacacional</span>
+    </p>
+</footer>
+
 </body>
 </html>
