--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div id="carousel">
             <button class="arrow-left control" aria-label="Previous image">◀</button>
             <button class="arrow-right control" aria-label="Next Image">▶</button>
-            <div class="item"><img src="https://unsplash.it/1600/?image=950" class="log current-item"></div>
-            <div class="item"><img src="https://unsplash.it/1600/?image=930" class="log current-item"></div>
-            <div class="item"><img src="https://unsplash.it/1600/?image=990" class="log current-item"></div>
-            <div class="item"><img src="https://unsplash.it/1600/?image=980" class="log current-item"></div>
+            <div class="item"><img src="./img/2023-09-19_12-24.png" class="log current-item"></div>
+            <div class="item"><img src="./img/mecanica-tecnologica.jpg" class="log current-item"></div>
+            <div class="item"><img src="./img/mecanica.jpg" class="log current-item"></div>
+            <div class="item"><img src="./img/Mãos-mecanico.jpg" class="log current-item"></div>
         </div>
     </section>
     <section class="normal" id="meca">
