--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -12,9 +13,9 @@
             <a href="#" class="logo"> Automação 🏎</a>
             <button class="hamburger"></button>
             <ul class="nav-list">
-                <li><a href="#">Sobre</a></li>
-                <li><a href="#">Projeto</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
+                <li><a href="./projeto.html">Projeto</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
