Mais uma atualização
subindoo

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <nav>
-            <a href="#" class="logo"> Automação 🏎</a>
+            <p class="logo"> Automação 🏎</p>
             <button class="hamburger"></button>
             <ul class="nav-list">
-                <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="./projeto.html">Projeto</a></li>
+                <li><a href="./sobre.html"  >Sobre</a></li>
+                <li><a href="./projeto.html" >Projeto</a></li>
                 <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
