--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <p class="logo"> Automação 🏎</p>
             <button class="hamburger"></button>
             <ul class="nav-list">
-                <li><a href="./sobre.html"  >Sobre</a></li>
-                <li><a href="./projeto.html" >Projeto</a></li>
+                <li><a href="./index.html" >Home</a></li>
+                <li><a href="./projeto.html" >Blog</a></li>
                 <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
@@ -55,22 +55,6 @@
 
 
 <footer>
-
-    <h2>Entre em contato</h2>
-    <p>Caso deseje realizar seu projeto ou fazer um orçamento, nos envie uma mensagem.</p>
-    
-
-    <form>
-        <input type="text" name="nome" placeholder="Informe seu nome">
-
-        <input type="email" name="email" placeholder="Informe seu e-mail">
-
-        <textarea name="mensagem" cols="30" rows="10" placeholder="Escreva sua mensagem"></textarea>
-
-        <input type="submit" value="Enviar" class="btn">
-
-    </form>
-
     <p>
         Site Criado para <span class="desenvolvido">Projeto Eduacacional</span>
     </p>
