Atualização do projeto
Subindo código

--- a/contato.html
+++ b/contato.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="/css/contato.css">
 </head>
 <body>
-    
+
     <section>
+        <header class="cabecalho">
+            <nav class="cabecalho-menu">
+                <a href="/index.html">Pagina Inicial</a>
+            </nav>
+        </header>
+
 
         <h1>Projeto independente</h1>
         <p>Caso deseje realizar seu projeto ou fazer um orçamento, nos envie uma mensagem.</p>
