--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p class="logo"> Automação 🏎</p>
             <button class="hamburger"></button>
             <ul class="nav-list">
-                <li><a href="./index.html" >Home</a></li>
+                <li><a href="./index.html" >Pagina Inicial</a></li>
                 <li><a href="./projeto.html" >Blog</a></li>
                 <li><a href="./contato.html">Contato</a></li>
             </ul>
