--- a/contato.html
+++ b/contato.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="/css/contato.css">
 </head>
 <body>
+    
+    <header class="cabecalho">
+        <nav class="cabecalho-menu">
+            <a class="cabecalho-menu-item" href="/index.html">Pagina Inicial</a>
+        </nav>
+    </header>
 
     <section>
-        <header class="cabecalho">
-            <nav class="cabecalho-menu">
-                <a href="/index.html">Pagina Inicial</a>
-            </nav>
-        </header>
 
 
         <h1>Projeto independente</h1>
