--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Automotivo</title>
     <link rel="stylesheet" href="./css/style.css">
+    <!--Icones-->
+    <script src="https://kit.fontawesome.com/a28516f6e1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
+        
         <nav>
-            <p class="logo"> Automação 🏎</p>
+            <img class="logo" src="/img/mechanic-logo-maker-a1165.png" alt="">
+            <!--<p class="logo"> Auto-Programming </p>-->
             <button class="hamburger"></button>
             <ul class="nav-list">
                 <li><a href="./index.html" >Pagina Inicial</a></li>
