--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
         </div>
     </section>
 
+    <section class="video">
+        <div class="video-player">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/y-Uju8G07c8?si=qj47wotfn90Mx452" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+    </section>
 
 
 <footer>
