--- a/index.html
+++ b/index.html
@@ -57,18 +57,28 @@
     </section>
 
     <section class="video">
+        
         <div class="video-player">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/y-Uju8G07c8?si=qj47wotfn90Mx452" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
 
+    <section class="texto-final">
+        <h2 class="titulo-final" ><span>O Futuro Sustentável: A Importância dos Carros Elétricos</span></h2>
+        <p class="paragrafo-final" >Em um mundo onde a busca por soluções sustentáveis é mais urgente do que nunca, os carros elétricos emergem como uma peça fundamental na transição para um futuro mais verde e habitável. Estamos diante de um momento crítico na história, onde a preservação do meio ambiente não é apenas uma escolha, mas uma necessidade premente.</p>
+        <p class="paragrafo-final" >Os veículos elétricos representam um avanço significativo nesse caminho rumo à sustentabilidade. Ao contrário dos veículos movidos a combustíveis fósseis, os carros elétricos operam com zero emissões diretas de poluentes atmosféricos. Isso significa que ao dirigir um carro elétrico, não estamos contribuindo para a deterioração da qualidade do ar, um problema que afeta diretamente a saúde pública em muitas cidades ao redor do mundo.</p>
+        <p class="paragrafo-final" >Outro aspecto crucial é a redução da dependência dos combustíveis fósseis. A extração e queima desses recursos são um dos principais impulsionadores das mudanças climáticas e da degradação do meio ambiente. Ao optarmos pelos veículos elétricos, estamos diminuindo a demanda por petróleo, gás natural e carvão, promovendo um desacoplamento vital entre crescimento econômico e degradação ambiental.</p>
+        <p class="paragrafo-final" >Além disso, os carros elétricos desempenham um papel importante na integração de fontes de energia renovável na matriz elétrica. À medida que a geração de eletricidade a partir do sol, vento e outras fontes limpas cresce, os veículos elétricos podem servir como grandes baterias móveis, armazenando energia em momentos de excesso de produção e devolvendo-a à rede quando necessário.</p>
+        <p class="paragrafo-final" >A tecnologia de baterias também está avançando rapidamente. As pesquisas estão focadas em tornar as baterias mais eficientes, com maior autonomia e menor impacto ambiental em seu ciclo de vida completo. Esses avanços não apenas tornam os carros elétricos mais acessíveis, mas também aumentam sua eficácia como uma solução sustentável.</p>
+        <p class="paragrafo-final" >Por fim, a disseminação dos carros elétricos tem implicações econômicas profundas. A transição para veículos elétricos cria empregos em setores como a produção de baterias, desenvolvimento de software e infraestrutura de carregamento. Além disso, reduz a dependência de importações de petróleo, fortalecendo a independência energética de muitos países.</p>
+        <p class="paragrafo-final" >Em resumo, os carros elétricos representam uma revolução na mobilidade sustentável. Ao adotá-los, não estamos apenas reduzindo a poluição do ar e combatendo as mudanças climáticas, mas também moldando um futuro onde a harmonia entre o progresso humano e a preservação ambiental é não apenas possível, mas imperativa. Portanto, é essencial investir, apoiar e promover esta tecnologia para o bem do nosso planeta e das gerações futuras.</p>
+    </section>
 
-<footer>
-    <p>
-        Site Criado para <span class="desenvolvido">Projeto Eduacacional</span>
-    </p>
-</footer>
-
+    <footer>
+        <p>
+            Site Criado para <span class="desenvolvido">Projeto Eduacacional</span>
+        </p>
+    </footer>
 <script src="./js/app.js"></script>
 </body>
 </html>
