Mais uma atualização
...

--- a/projeto.html
+++ b/projeto.html
@@ -13,13 +13,44 @@
         
     </header>
     <div class="container">
-        <div class="caixa">
+        <div class="caixas">
+            <div class="caixa-1">
+                <h2>Carros</h2>
+                <span class="data-post">desde quando começou</span>
+                <img src="./img/2023-09-19_12-24.png" width="620px">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint consequuntur ullam veniam vitae distinctio voluptatibus culpa iste dolorem explicabo tempora animi numquam optio alias, molestiae tenetur voluptates maiores ratione eaque.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere itaque earum, voluptatum distinctio dolorem repellendus nostrum ipsam similique. Voluptate vero maxime aliquid animi nihil nesciunt placeat, accusamus ut exercitationem non!</p>
+            </div>
+
+            <div class="caixa-2">
+                <h2>Carros Eletricos</h2>
+                <span class="data-post">desde quando começou</span>
+                <img src="./img/mecanica-tecnologica.jpg" width="620px">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, saepe qui, modi velit alias odio eos suscipit perferendis amet laudantium commodi optio aut assumenda quod reprehenderit, voluptatibus enim? Corporis, tenetur!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, quibusdam. Veniam voluptates sint tenetur obcaecati, dolorum aliquam maiores nihil, perspiciatis quia ut odio minus! Magnam impedit harum officia facere. Sunt?</p>
+            </div>
+
+            <div class="caixa-3">
+                <h2>Carros Combustão</h2>
+                <span class="data-post">desde quando começou</span>
+                <img src="./img/mecanica.jpg" width="620px">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, saepe qui, modi velit alias odio eos suscipit perferendis amet laudantium commodi optio aut assumenda quod reprehenderit, voluptatibus enim? Corporis, tenetur!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, quibusdam. Veniam voluptates sint tenetur obcaecati, dolorum aliquam maiores nihil, perspiciatis quia ut odio minus! Magnam impedit harum officia facere. Sunt?</p>
+            </div>
+
+            <div class="caixa-4">
+                <h2>Carros Hibridos</h2>
+                <span class="data-post">desde quando começou</span>
+                <img src="./img/Mãos-mecanico.jpg" width="620px">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis, saepe qui, modi velit alias odio eos suscipit perferendis amet laudantium commodi optio aut assumenda quod reprehenderit, voluptatibus enim? Corporis, tenetur!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium, quibusdam. Veniam voluptates sint tenetur obcaecati, dolorum aliquam maiores nihil, perspiciatis quia ut odio minus! Magnam impedit harum officia facere. Sunt?</p>
+            </div>
             
         </div>
 
     </div>
     <div class="barra-lateral">
-
+        <p>barra-lateral</p>
     </div>
 
 </body>
