--- a/projeto.html
+++ b/projeto.html
@@ -50,7 +50,14 @@
 
     </div>
     <div class="barra-lateral">
-        <p>barra-lateral</p>
+        
+        <div class="caixa-lateral">
+            <h3>Destaque</h3><br>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam porro maiores fugit quasi, molestias repellendus consequatur autem harum ex animi inventore consequuntur ad eligendi vitae quidem rerum aperiam unde totam.</p><br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis nihil quidem laborum, sapiente alias, consectetur id doloribus accusantium quaerat numquam doloremque rerum, tenetur qui ut consequatur dolore sit neque commodi.</p><br>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, quidem molestiae eum sit saepe ad vitae maxime, fugit ea amet minus facere, quo dicta quis reiciendis culpa quisquam minima quas.</p><br>
+        </div>
+        
     </div>
 
 </body>
