--- a/equipe.html
+++ b/equipe.html
@@ -15,7 +15,7 @@
             <button class="hamburger"></button>
             <ul class="nav-list">
                 <li><a href="index.html" >Pagina Inicial</a></li>
-                <li><a href="curriculo.html">Curriculo</a></li>
+                <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -34,7 +34,7 @@
             <div class="caixa-2">
                 <h2>Lucas de Souza Lanaro</h2>
                 <p class="data-post"><Strong>Matricula: 202308428497</Strong></p>
-                <img src="img/lanaro.jpeg" width="920px">
+                <img src="img/l_lanaro.jpg" width="920px">
                 <p>
                     Responsável designer de interiores do nosso projeto, moldando a experiência visual do site. Encarregado do CSS, utilizando da criatividade para estilizar cada elemento, garantindo que a estética do site
                 </p>            
