--- a/contato.html
+++ b/contato.html
@@ -10,7 +10,7 @@
     
     <header class="cabecalho">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="/index.html">Pagina Inicial</a>
+            <a class="cabecalho-menu-item" href="index.html">Pagina Inicial</a>
         </nav>
     </header>
 
