--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automotivo</title>
+    <title>Carros eletricos para o meio ambiente</title>
     <link rel="stylesheet" href="./css/style.css">
     <!--Icones-->
     <script src="https://kit.fontawesome.com/a28516f6e1.js" crossorigin="anonymous"></script>
@@ -19,6 +19,7 @@
                 <li><a href="index.html" >Pagina Inicial</a></li>
                 <li><a href="equipe.html" >Equipe</a></li>
                 <li><a href="contato.html">Contato</a></li>
+                <li><a href="curriculo.html">Portifólio</a></li>
             </ul>
         </nav>
     </header>
